@@ -1,3 +1,6 @@
+[B]Version 4.2.0[/B]
+    -PTC fixed and ary zindagi and other ary channels
+    
 [B]Version 4.1.9[/B]
     -willow, check for error
     
